--- a/twitter/index.html
+++ b/twitter/index.html
@@ -7,16 +7,15 @@
   <script type="text/javascript" scr="./vue.js"></script>
   <title></title>
 </head>
-<body>
-  </html><body class="flex items-center justify-center vh-100">
-  <div class="w-75 center ba b--black-10">
+<body class="flex items-center justify-center vh-100">
+  <div class="w-75 center ba b--black-10" id="twitterVue">
     <div class="pv2 tc bb b--black-10">
       <h1 class="ma0 f5 normal">Compose New Tweet</h1>
     </div>
     <div class="bg-near-white pa3">
-      <textarea name="tweet" rows="3" class="w-100 br2 ba b--black-10 pa2" placeholder="Write your tweet here"></textarea>
+      <textarea placeholder="Write your tweet here" name="tweet" v-model="tweet" rows="3" class="w-100 br2 ba b--black-10 pa2"></textarea>
       <div class="mt3 tr">
-        <button class="button-reset bg-blue bn white f6 fw5 pv2 ph3 br2 pointer dim">Tweet</button>
+        <button :disabled="tweetIsEmpty" class="button-reset bg-blue bn white f6 fw5 pv2 ph3 br2 dim">Tweet</button>
       </div>
     </div>
   </div>
