removed local vuejs and included local stylesheet

--- a/twitter/index.html
+++ b/twitter/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <script src="https://unpkg.com/vue"></script>
+  <script src="./dist/main.js" type="text/javascript" charset="utf-8" async defer></script>
   <link rel="stylesheet" type="text/css" href="https://unpkg.com/tachyons@4.7.0/css/tachyons.min.css">
-
-  <script type="text/javascript" scr="./vue.js"></script>
+  <link rel="stylesheet" type="text/css" href="./dist/twitter.css">
   <title></title>
 </head>
 <body class="flex items-center justify-center vh-100">
