added vue echo message

--- a/basic-data-binding/index.html
+++ b/basic-data-binding/index.html
@@ -6,6 +6,8 @@
 <body>
 <div id="root">
 	<input type="text" name="input" v-model="message">	
+
+	<p>The value of the input is {{message}}</p>
 </div>
 
 
