--- a/vue-shop/index.html
+++ b/vue-shop/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Template -->
+    <div id="app">
+            <div>
+                <input type="text" v-model="name" placeholder="Your name?" />
+                <h5>Hello, {{name}}</h5>
+            </div>
+        </div>
+        
      <!-- Add Vue -->
      <script src="https://unpkg.com/vue/dist/vue.js"></script>
      <script>
