--- a/vue-shop/index.html
+++ b/vue-shop/index.html
@@ -1,32 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <!-- Template -->
-    <div id="app">
-            <div>
-                <input type="text" v-model="name" placeholder="Your name?" />
-                <h5>Hello, {{name}}</h5>
-            </div>
-        </div>
-        
-     <!-- Add Vue -->
-     <script src="https://unpkg.com/vue/dist/vue.js"></script>
-     <script>
-        /* Create a Vue instance*/
-         new Vue({
-             template: '#app',
-             data: function() {
-                 return {
-                     name: ''
-                 }
-             }
-         }).$mount('#app');
-     </script>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>vue-shop</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
